RESOLVED FIXED235007
Fix some CSS filter interpolation issues
https://bugs.webkit.org/show_bug.cgi?id=235007
Summary Fix some CSS filter interpolation issues
Simon Fraser (smfr)
Reported 2022-01-08 12:11:17 PST
Fix some CSS filter interpolation issues
Attachments
Patch (65.19 KB, patch)
2022-01-08 12:12 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-01-08 12:12:47 PST
EWS
Comment 2 2022-01-08 15:41:46 PST
Committed r287815 (245867@main): <https://commits.webkit.org/245867@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448677 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-08 15:42:19 PST
Simon Fraser (smfr)
Comment 4 2022-01-10 11:32:04 PST
*** Bug 235000 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.