Fix some CSS filter interpolation issues https://bugs.webkit.org/show_bug.cgi?id=235007

Reviewed by Antoine Quint.

LayoutTests/imported/w3c:

More passing now.

* web-platform-tests/css/filter-effects/animation/filter-interpolation-002-expected.txt:
* web-platform-tests/css/filter-effects/animation/filter-interpolation-003-expected.txt:
* web-platform-tests/css/filter-effects/animation/filter-interpolation-004-expected.txt:

Source/WebCore:

Ensure that filter values are clamped after animation according to
https://drafts.fxtf.org/filter-effects-1/.

Tested by WPT.

* platform/graphics/filters/FilterOperation.cpp:
(WebCore::BasicColorMatrixFilterOperation::blend):
(WebCore::BasicComponentTransferFilterOperation::blend):
(WebCore::BlurFilterOperation::blend):
(WebCore::DropShadowFilterOperation::blend):

LayoutTests:

imported/w3c/web-platform-tests/css/filter-effects/animation/filter-interpolation-004.html no longer asserts.

* TestExpectations:



Canonical link: https://commits.webkit.org/245867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287815 268f45cc-cd09-0410-ab3c-d52691b4dbfc